--- a/blueprints/hooks/light/light.yaml
+++ b/blueprints/hooks/light/light.yaml
@@ -40,6 +40,8 @@ blueprint:
         select:
           options:
             - IKEA E1524/E1810 TRÅDFRI Wireless 5-Button Remote
+            - EnOcean PTM 215Z Green Power 2-Channel Switch (Top)
+            - EnOcean PTM 215Z Green Power 2-Channel Switch (Bottom)
             - IKEA E1743 TRÅDFRI On/Off Switch & Dimmer
             - IKEA E1743 TRÅDFRI On/Off Switch & Dimmer (#2)
             - IKEA E1744 SYMFONISK Rotary Remote
@@ -178,6 +180,20 @@ variables:
       color_up: button_right_short
       color_up_repeat: button_right_long
       toggle: button_center_short
+    EnOcean PTM 215Z Green Power 2-Channel Switch (Top):
+      turn_on: top_button_up_short
+      brightness_up_repeat: top_button_up_long
+      color_up: top_button_up_double
+      turn_off: top_button_down_short
+      brightness_down_repeat: top_button_down_long
+      color_down: top_button_down_double
+    EnOcean PTM 215Z Green Power 2-Channel Switch (Bottom):
+      turn_on: bottom_button_up_short
+      brightness_up_repeat: bottom_button_up_long
+      color_up: bottom_button_up_double
+      turn_off: bottom_button_down_short
+      brightness_down_repeat: bottom_button_down_long
+      color_down: bottom_button_down_double
     IKEA E1743 TRÅDFRI On/Off Switch & Dimmer:
       turn_on: button_up_short
       brightness_up_repeat: button_up_long
